# parsing_vacancies_hh.ru

./: .env  README.md  main.py  pyproject.toml
data/: data.json
src/: abstract_classes.py  config.py  experiments.py  hh_ru_parsing_data.py  parsing.py  parsing_class.py  utils.py  vacancies_class.py  work_with_file.py  work_with_vacancies.py
tests/: test_hh_ru_parsing_data.py  test_work_with_file.py  test_work_with_vacancies.py
